# boomerjs

./: .gitignore  Cargo.toml  example-r-graph.txt  init.js  netlify.toml  package-lock.json  package.json  reactive-script.attempt.4.js  reactive-script.attempt1.js  reactive-script.attempt2.js  reactive-script.input.js  reactive-script.notes.md  reactive-script.output.2.js  reactive-script.output.3.js  reactive-script.output.4.js  reactive-script.output.js  syntax.bmr  syntax.js  test.js
compiler/: Cargo.toml  compiler-notes.txt  input-attempt2.js  input.js  out.js  output.js
compiler/src/: main.rs
crates/codegen_macros/: Cargo.toml
crates/codegen_macros/src/: fold.rs  lib.rs
crates/compiler/: Cargo.toml  compiler-notes.txt  input-attempt2.js  input.js  out.js  output-expr.js  reactivity-out.html  reactivity-out.js  reactivity.js  runtime.html  runtime.js
crates/compiler/src/: ast.rs  ast.txt  codegen.rs  flow.js  jsx_transform.rs  main.rs  parser.rs  reactive_script.rs  transform.rs
netlify/edge-functions/: a_big_script.js  another_big_script.js  render.js
public/: index.html
test-multi-file/: esbuild-out.js
test-multi-file/input/: index.js  log.js  logError.js
test-multi-file/output/: index.js  log.js  logError.js
test_data/: input.js  output.js
