[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_impl = "0.5.0"
swc_common = { version = "0.17.25", features = ["tty-emitter"] }
swc_ecma_ast = "0.76.2"
swc_ecma_parser = "0.102.10"
swc_ecma_visit = "0.62.0"
